# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import listingsRouter from "./listings";
 import sellersRouter from "./sellers";
+import notificationsRouter from "./notifications";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(listingsRouter);
 router.use(sellersRouter);
+router.use(notificationsRouter);
 
 export default router;
